# walletinsights

./: .gitignore  README.md  pyproject.toml
walletinsights/: __init__.py  apps.py  auth_hooks.py  managers.py  models.py  providers.py  tasks.py  urls.py  views.py
walletinsights/migrations/: 0001_initial.py  0002_ownercharacter_is_valid.py  0003_remove_walletdivision_division_division_name_idx_and_more.py  0004_walletjournalentry_division_entry_idx.py
walletinsights/templates/walletinsights/: base.html  dash.html  menu.html
